Replace Paths.get with Path.of
(cherry picked from commit 6b21422e15d8a35611eb6a43846e251adbedbd7d)

# Conflicts:
#	testing/trino-tests/src/test/java/io/trino/sql/planner/BaseCostBasedPlanTest.java
(cherry picked from commit 4c12144e92fa52fe4b108d992b59426684a0b62b)