@@ -43,7 +43,6 @@ import javax.security.auth.kerberos.KerberosPrincipal;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Instant;
 import java.util.List;
 import java.util.Locale;
@@ -1033,7 +1032,7 @@ public abstract class BaseFileBasedSystemAccessControlTest
     @Test
     public void testQueryDocsExample()
     {
-        Path rulesFile = Paths.get("../../docs/src/main/sphinx/security/query-access.json");
+        Path rulesFile = Path.of("../../docs/src/main/sphinx/security/query-access.json");
         SystemAccessControl accessControlManager = newFileBasedSystemAccessControl(rulesFile, ImmutableMap.of());
 
         accessControlManager.checkCanExecuteQuery(admin, queryId);
@@ -1123,7 +1122,7 @@ public abstract class BaseFileBasedSystemAccessControlTest
     @Test
     public void testSystemInformationDocsExample()
     {
-        Path rulesFile = Paths.get("../../docs/src/main/sphinx/security/system-information-access.json");
+        Path rulesFile = Path.of("../../docs/src/main/sphinx/security/system-information-access.json");
         SystemAccessControl accessControlManager = newFileBasedSystemAccessControl(rulesFile, ImmutableMap.of());
 
         accessControlManager.checkCanReadSystemInformation(admin);
@@ -1181,7 +1180,7 @@ public abstract class BaseFileBasedSystemAccessControlTest
     @Test
     public void testSessionPropertyDocsExample()
     {
-        Path rulesFile = Paths.get("../../docs/src/main/sphinx/security/session-property-access.json");
+        Path rulesFile = Path.of("../../docs/src/main/sphinx/security/session-property-access.json");
         SystemAccessControl accessControl = newFileBasedSystemAccessControl(rulesFile, ImmutableMap.of());
         Identity bannedUser = Identity.ofUser("banned_user");
         SystemSecurityContext bannedUserContext = new SystemSecurityContext(Identity.ofUser("banned_user"), queryId, queryStart);
@@ -1892,7 +1891,7 @@ public abstract class BaseFileBasedSystemAccessControlTest
     @Test
     public void testAuthorizationDocsExample()
     {
-        Path rulesFile = Paths.get("../../docs/src/main/sphinx/security/authorization.json");
+        Path rulesFile = Path.of("../../docs/src/main/sphinx/security/authorization.json");
         SystemAccessControl accessControlManager = newFileBasedSystemAccessControl(rulesFile, ImmutableMap.of());
         List<String> schema = List.of("catalog", "schema");
         List<String> tableOrView = List.of("catalog", "schema", "table_or_view");
@@ -1953,7 +1952,7 @@ public abstract class BaseFileBasedSystemAccessControlTest
     protected Path getResourcePath(String resourceName)
             throws URISyntaxException
     {
-        return Paths.get(requireNonNull(this.getClass().getClassLoader().getResource(resourceName), "Resource does not exist: " + resourceName).toURI());
+        return Path.of(requireNonNull(this.getClass().getClassLoader().getResource(resourceName), "Resource does not exist: " + resourceName).toURI());
     }
 
     private static void assertAccessDenied(ThrowingCallable callable, String expectedMessage)
